# wg-easy-api-wrapper

./: Pipfile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs-build.yml  python-publish.yml
Writerside/: w.tree  writerside.cfg
Writerside/topics/: Client.md  Server.md  home.md
wg_easy_api_wrapper/: __init__.py  client.py  errors.py  server.py
