[metadata]
name = wg-easy-api-wrapper
version = 1.0.7
author = MrShandy
author_email = mrshandy@shandy-dev.ru
description = Wrapper for wg-easy API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Shandeika/wg-easy-api-wrapper
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    aiohttp~=3.9.0
